--- a/css/styles.css
+++ b/css/styles.css
@@ -59,6 +59,7 @@ p {
 
 .location-title {
   margin: 0;
+  margin-bottom: 32px;
   font-weight: 500;
   font-size: 40px;
   line-height: 1;
@@ -84,7 +85,6 @@ img {
   display: block;
   max-width: 100%;
   height: auto;
-  margin-top: 32px;
   margin-left: auto;
   margin-right: auto;
   box-shadow: -14px 24px 68px -16px rgba(0, 0, 0, 0.12);
